awful.widget.tasklist: use symbols chars rather than images
Signed-off-by: Julien Danjou <julien@danjou.info>

--- a/lib/awful/widget/tasklist.lua.in
+++ b/lib/awful/widget/tasklist.lua.in
@@ -89,19 +89,17 @@ local function widget_tasklist_label_common(c, args)
     local bg_urgent = args.bg_urgent or theme.tasklist_bg_urgent or theme.bg_urgent
     local fg_minimize = args.fg_minimize or theme.tasklist_fg_minimize or theme.fg_minimize
     local bg_minimize = args.bg_minimize or theme.tasklist_bg_minimize or theme.bg_minimize
-    local floating_icon = args.floating_icon or theme.tasklist_floating_icon
     local font = args.font or theme.tasklist_font or theme.font or ""
     local bg = nil
     local text = "<span font_desc='"..font.."'>"
-    local name
-    local status_image
-    if client.floating.get(c) and floating_icon then
-        status_image = capi.image(floating_icon)
-    end
+    local name = ""
+    if client.floating.get(c) then name = name .. "✈" end
+    if c.maximized_horizontal then name = name .. '⬌' end
+    if c.maximized_vertical then name = name .. "⬍" end
     if c.minimized then
-        name = util.escape(c.icon_name) or util.escape(c.name) or util.escape("<untitled>")
+        name = name .. util.escape(c.icon_name) or util.escape(c.name) or util.escape("<untitled>")
     else
-        name = util.escape(c.name) or util.escape("<untitled>")
+        name = name .. util.escape(c.name) or util.escape("<untitled>")
     end
     if capi.client.focus == c then
         bg = bg_focus
@@ -120,13 +118,12 @@ local function widget_tasklist_label_common(c, args)
         text = text .. name
     end
     text = text .. "</span>"
-    return text, bg, status_image, c.icon
+    return text, bg, nil, c.icon
 end
 
 --- Return labels for a tasklist widget with clients from all tags and screen.
 -- It returns the client name and set a special
 -- foreground and background color for focused client.
--- It also puts a special icon for floating windows.
 -- @param c The client.
 -- @param screen The screen we are drawing on.
 -- @param args The arguments table.
@@ -134,7 +131,7 @@ end
 -- fg_focus The foreground color for focused client.
 -- bg_urgent The background color for urgent clients.
 -- fg_urgent The foreground color for urgent clients.
--- @return A string to print, a background color and a status image.
+-- @return A string to print, a background color.
 function label.allscreen(c, screen, args)
     return widget_tasklist_label_common(c, args)
 end
@@ -142,7 +139,6 @@ end
 --- Return labels for a tasklist widget with clients from all tags.
 -- It returns the client name and set a special
 -- foreground and background color for focused client.
--- It also puts a special icon for floating windows.
 -- @param c The client.
 -- @param screen The screen we are drawing on.
 -- @param args The arguments table.
@@ -150,7 +146,7 @@ end
 -- fg_focus The foreground color for focused client.
 -- bg_urgent The background color for urgent clients.
 -- fg_urgent The foreground color for urgent clients.
--- @return A string to print, a background color and a status image.
+-- @return A string to print, a background color.
 function label.alltags(c, screen, args)
     -- Only print client on the same screen as this widget
     if c.screen ~= screen then return end
@@ -160,7 +156,6 @@ end
 --- Return labels for a tasklist widget with clients from currently selected tags.
 -- It returns the client name and set a special
 -- foreground and background color for focused client.
--- It also puts a special icon for floating windows.
 -- @param c The client.
 -- @param screen The screen we are drawing on.
 -- @param args The arguments table.
@@ -168,7 +163,7 @@ end
 -- fg_focus The foreground color for focused client.
 -- bg_urgent The background color for urgent clients.
 -- fg_urgent The foreground color for urgent clients.
--- @return A string to print, a background color and a status image.
+-- @return A string to print, a background color.
 function label.currenttags(c, screen, args)
     -- Only print client on the same screen as this widget
     if c.screen ~= screen then return end
@@ -189,7 +184,6 @@ end
 --- Return label for only the currently focused client.
 -- It returns the client name and set a special
 -- foreground and background color for focused client.
--- It also puts a special icon for floating windows.
 -- @param c The client.
 -- @param screen The screen we are drawing on.
 -- @param args The arguments table.
@@ -197,7 +191,7 @@ end
 -- fg_focus The foreground color for focused client.
 -- bg_urgent The background color for urgent clients.
 -- fg_urgent The foreground color for urgent clients.
--- @return A string to print, a background color and a status image.
+-- @return A string to print, a background color.
 function label.focused(c, screen, args)
     -- Only print client on the same screen as this widget
     if c.screen == screen and capi.client.focus == c then
