--- a/lib/awful/menu.lua.in
+++ b/lib/awful/menu.lua.in
@@ -216,7 +216,7 @@ local function add_item(data, num, item_info)
     item:buttons(bindings)
 
     local mouse_enter_func = function () item_enter(data, num, true) end
-    item:add_signal("mouse::enter", mouse_enter_func)
+    item:connect_signal("mouse::enter", mouse_enter_func)
 
     -- Create the submenu icon widget
     local submenu
