--- a/lib/awful/rules.lua.in
+++ b/lib/awful/rules.lua.in
@@ -111,6 +111,6 @@ function apply(c)
     end
 end
 
-client.add_signal("manage", apply)
+client.connect_signal("manage", apply)
 
 -- vim: filetype=lua:expandtab:shiftwidth=4:tabstop=8:softtabstop=4:encoding=utf-8:textwidth=80
