--- a/lib/awful/widget/common.lua.in
+++ b/lib/awful/widget/common.lua.in
@@ -59,8 +59,8 @@ function list_update(w, buttons, label, data, widgets, objects)
                     -- button object the user provided, but with the object as
                     -- argument.
                     local btn = capi.button { modifiers = b.modifiers, button = b.button }
-                    btn:add_signal("press", function () b:emit_signal("press", o) end)
-                    btn:add_signal("release", function () b:emit_signal("release", o) end)
+                    btn:connect_signal("press", function () b:emit_signal("press", o) end)
+                    btn:connect_signal("release", function () b:emit_signal("release", o) end)
                     data[o][#data[o] + 1] = btn
                 end
             end
