--- a/lib/awful/widget/tasklist.lua.in
+++ b/lib/awful/widget/tasklist.lua.in
@@ -56,26 +56,26 @@ function new(label, buttons)
     local data = setmetatable({}, { __mode = 'k' })
     local u = function () tasklist_update(w, buttons, label, data, widgets) end
     for s = 1, capi.screen.count() do
-        tag.attached_add_signal(s, "property::selected", u)
-        capi.screen[s]:add_signal("tag::attach", u)
-        capi.screen[s]:add_signal("tag::detach", u)
+        tag.attached_connect_signal(s, "property::selected", u)
+        capi.screen[s]:connect_signal("tag::attach", u)
+        capi.screen[s]:connect_signal("tag::detach", u)
     end
-    capi.client.add_signal("new", function (c)
-        c:add_signal("property::urgent", u)
-        c:add_signal("property::floating", u)
-        c:add_signal("property::maximized_horizontal", u)
-        c:add_signal("property::maximized_vertical", u)
-        c:add_signal("property::name", u)
-        c:add_signal("property::icon_name", u)
-        c:add_signal("property::skip_taskbar", u)
-        c:add_signal("property::hidden", u)
-        c:add_signal("tagged", u)
-        c:add_signal("untagged", u)
+    capi.client.connect_signal("new", function (c)
+        c:connect_signal("property::urgent", u)
+        c:connect_signal("property::floating", u)
+        c:connect_signal("property::maximized_horizontal", u)
+        c:connect_signal("property::maximized_vertical", u)
+        c:connect_signal("property::name", u)
+        c:connect_signal("property::icon_name", u)
+        c:connect_signal("property::skip_taskbar", u)
+        c:connect_signal("property::hidden", u)
+        c:connect_signal("tagged", u)
+        c:connect_signal("untagged", u)
     end)
-    capi.client.add_signal("unmanage", u)
-    capi.client.add_signal("list", u)
-    capi.client.add_signal("focus", u)
-    capi.client.add_signal("unfocus", u)
+    capi.client.connect_signal("unmanage", u)
+    capi.client.connect_signal("list", u)
+    capi.client.connect_signal("focus", u)
+    capi.client.connect_signal("unfocus", u)
     u()
     return w
 end
