--- a/lib/naughty.lua.in
+++ b/lib/naughty.lua.in
@@ -297,7 +297,7 @@ function notify(args)
     local die = function () destroy(notification) end
     if timeout > 0 then
         local timer_die = capi.timer { timeout = timeout }
-        timer_die:add_signal("timeout", die)
+        timer_die:connect_signal("timeout", die)
         timer_die:start()
         notification.timer = timer_die
     end
@@ -317,7 +317,7 @@ function notify(args)
         else
             if notification.timer then notification.timer:stop() end
             notification.timer = capi.timer { timeout = hover_timeout }
-            notification.timer:add_signal("timeout", die)
+            notification.timer:connect_signal("timeout", die)
             notification.timer:start()
         end
     end
@@ -362,7 +362,7 @@ function notify(args)
                                     border_color = border_color,
                                     border_width = border_width })
 
-    if hover_timeout then notification.box:add_signal("mouse::enter", hover_destroy) end
+    if hover_timeout then notification.box:connect_signal("mouse::enter", hover_destroy) end
 
     -- calculate the height
     if not height then
@@ -415,7 +415,7 @@ end
 -- DBUS/Notification support
 -- Notify
 if capi.dbus then
-    capi.dbus.add_signal("org.freedesktop.Notifications", function (data, appname, replaces_id, icon, title, text, actions, hints, expire)
+    capi.dbus.connect_signal("org.freedesktop.Notifications", function (data, appname, replaces_id, icon, title, text, actions, hints, expire)
     args = { preset = { } }
     if data.member == "Notify" then
         if text ~= "" then
@@ -489,7 +489,7 @@ if capi.dbus then
     end
     end)
 
-    capi.dbus.add_signal("org.freedesktop.DBus.Introspectable",
+    capi.dbus.connect_signal("org.freedesktop.DBus.Introspectable",
     function (data, text)
     if data.member == "Introspect" then
         local xml = [=[<!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object
