--- a/lib/awful/menu.lua.in
+++ b/lib/awful/menu.lua.in
@@ -260,7 +260,7 @@ function clients(menu)
                                   if not c:isvisible() then
                                       tags.viewmore(c:tags(), c.screen)
                                   end
-                                  capi.client.focus = c
+                                  c:focus()
                               end,
                               c.icon }
     end
